Add script for creating admin user

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "main": "app.js",
     "scripts": {
         "dev": "node app.js --watch",
-        "start": "node app.js"
+        "start": "node app.js",
+        "populate": "node db/populateUser.js "
     },
     "repository": {
         "type": "git",
@@ -19,6 +20,7 @@
     "homepage": "https://github.com/KVG24/kvg-blog-api-backend#readme",
     "dependencies": {
         "@prisma/client": "^6.16.3",
+        "bcryptjs": "^3.0.2",
         "dotenv": "^17.2.3",
         "express": "^5.1.0"
     },
